# matrix

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  matrix.dot
.github/workflows/: doxygen.yml
asg/: CMakeLists.txt
asg/src/: asg.cpp
awesops/: CMakeLists.txt
awesops/include/: game.hpp  input.hpp  map.hpp  player.hpp  worker.hpp
awesops/src/: awesops.cpp  game.cpp  input.cpp  map.cpp  player.cpp  worker.cpp
matrix/: CMakeLists.txt
matrix/include/: mapp.hpp  mbsp.hpp  mcfg.hpp  mconsole.hpp  mcvar.hpp  mdev.hpp  mfile.hpp  mgui.hpp  mhwabs.hpp  mmaterial.hpp  mmodel.hpp  mnet.hpp  mphysics.hpp  mscene.hpp  mschedule.hpp  mview.hpp
matrix/include/hw/: mgl.hpp  mkeyboard.hpp  mmotif.hpp  msdl.hpp  mvk.hpp
matrix/src/: mapp.cpp  mbsp.cpp  mcfg.cpp  mconsole.cpp  mcvar.cpp  mdev.cpp  mfile.cpp  mgui.cpp  mhwabs.cpp  mmaterial.cpp  mmodel.cpp  mnet.cpp  mphysics.cpp  mscene.cpp  mschedule.cpp  mview.cpp
matrix/src/hw/: mgl.cpp  mmotif.cpp  msdl.cpp  mvk.cpp
matrixapp/: CMakeLists.txt
matrixapp/src/: matrixapp.cpp
matrixworld/: CMakeLists.txt
matrixworld/include/: mwuser.hpp  mwweb.hpp
matrixworld/src/: mwuser.cpp  mwweb.cpp
nrsim/: CMakeLists.txt
nrsim/src/: nrsim.cpp
rcr/: CMakeLists.txt
rcr/src/: rcr.cpp
rdm/: CMakeLists.txt
rdm/include/: rdmnet.hpp
rdm/src/: rdm.cpp  rdmnet.cpp
resources/: matrix.cfg  matrixworld.cfg
resources/materials/: bsp.mmf  diffuse.mmf  diffuseTextured.mmf  map.mmf  vktest.mmf
resources/materials/bsp/: bsp.mmf  sky.mmf
resources/materials/gui/: GUIImageComponent.mmf  GUITextComponent.mmf  guibase.mmf
resources/materials/sm/: model0.mmf  modelbase.mmf
resources/models/: sidewalk0.glb  tree.glb
resources/rdm/baseq3/scripts/: default_shaderlist.txt  rdm.shader  shaderlist.txt
resources/rdm/rdm/maps/: ffa_me2.bsp  ffa_me2.map  ffa_me2.prt  ffa_me2.srf  ffa_tiny4quad.bsp  ffa_tiny4quad.map  ffa_tiny4quad.prt  ffa_tiny4quad.srf  test.bsp  test.map  test.prt  test.srf
resources/shaders/: bsp.frag  bsp.vert  diffuse.frag  diffuse.gl3.frag  diffuse.vert  diffuseTextured.frag  map.gl3.frag  map.gl3.vert
resources/shaders/bsp/: bsp.frag  bsp.vert  sky.frag
resources/shaders/gui/: GUIImageComponent.frag  GUITextComponent.frag  gui.vert
